>> Retirando campo 'Horario do inicio da entrevista'; 	>> Retirando campos referentes a status social: 		> 'Grau de instrucao do paciente'; 		> 'Grau de instrucao do chefe de familia'; 		> 'Renda mensal da familia'; 		> 'Aquisicao de bens'; 	>> Alterando pergunta 'Qual o principal motivo pelo qual veio à unidade de saúde para esta consulta' em 'Sobre a consulta'; 	>> Incluindo pergunta 'Se fumante, há quanto tempo parou de fumar?' em 'Hábitos'; 	>> Inserindo campo 'Desfecho'; 	>> Inserindo campo 'Conduta';
	Todas as alterações estão de acordo com as solicitações feitas pela
	Dany em reunião do dia 18-08-2011.

--- a/media/css/form_style.css
+++ b/media/css/form_style.css
@@ -32,6 +32,17 @@ label{
 	font-size: 100%;
 	vertical-align: middle;
 }
+
+label.desfecho{
+	font-size:		11pt;
+	text-align:		center;
+	width:			50%;
+}
+
+label.provavel{
+	color:	#B10000;
+}
+
 input.textbox{
 	width: 350px;
 }
